# newsee

./: .env  .gitignore  Dockerfile  README.md  aerich.ini  alembic.ini  database.py  docker-compose.yml  main.py  models.py  notes.txt  pyproject.toml  requirements.txt  tortoise_conf.py
alembic/: env.py
alembic/versions/: 06e521abbd9d_add_address_table.py  1fa6af05cb68_add_column_address_id_to_users_table.py  2a9e143d8623_add_phone_number.py  32ab5f3ad4c6_add_archive_table.py  fe552b926597_add_contraints_and_relationships_to_.py
application/auth/: auth.py
application/crypto/: crypto.py  schemas_crypto.py
application/news/: news.py  schemas_news.py
application/stocks/: stocks.py
application/user/: schemas.py  user_favorite_news.py  user_news.py  users.py
config/: container.py  settings.py  tortoise_conf.py
database_pack/: database.py  getDB.py  models.py  schemas.py
db/: database.py  models.py  schemas.py  schemas_news.py
logs/: loguru.py
migrations/models/: 0_20221207050310_init.py  10_20221214095429_update.py  11_20230324033116_update.py  12_20230324033618_update.py  13_20230325020719_update.py  1_20221207051044_update.py  2_20221207073040_update.py  7_20221207084800_None.py  (+2 more)
routers/: address.py  archive.py  auth.py  crypto.py  crypto_news.py  news.py  profile.py  stocks.py  todo.py  user.py  user_favorite_news.py  user_news.py  users.py
utils/: all_exceptions.py  auth_helpers.py  base_service.py  crypto_parser.py  exceptions.py  news_parser.py  responses.py  service.py  service_base.py  stock_parser.py  todo_exceptions.py
